各種ライブラリのインポート、paginationコンポーネントの配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
+    ],
+    "types": ["vuetify"]
   },
   "include": [
     "src/**/*.ts",
